--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tsla082.apps.aplicacioncontroldiabetes" >
+    package="com.tsla082.apps.aplicacioncontroldiabetes">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -14,22 +14,36 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".RegistroAlimentosYControlActivity" >
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".RegistroAlimentosYControlActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".TendenciaHistoricaActivity" />
-        <activity android:name=".Splash" >
+        <activity
+            android:name=".TendenciaHistoricaActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Splash"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".registropac" >
-        </activity>
+        <activity
+            android:name=".registropac"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
 
-        <activity android:name=".MainActivity" >
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,14 +51,22 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".RegistroAyunas" >
-        </activity>
-        <activity android:name=".RegistroDiario" >
-        </activity>
-        <activity android:name=".DatosPersonales" >
-        </activity>
-        <activity android:name=".Comidas" >
-        </activity>
+        <activity
+            android:name=".RegistroAyunas"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".RegistroDiario"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".DatosPersonales"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Comidas"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
 
     </application>
 
